# chaos-commander-cube

./: .gitignore  README.md
cubes/grixis/: cube_cobra_export.txt
tools/: pyproject.toml
tools/ccc/: cube_cobra.py  manifest.py
tools/mtgccc/: __init__.py  manifest.py  scryfall.py
tools/scripts/: build_manifest.py
tools/tests/: test_cube_cobra.py  test_manifest.py
